Increased z-index on date-picker to avoid conflict with bootstrap button-groups.

--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -22,7 +22,7 @@
 }
 
 .react-datepicker-popper {
-  z-index: 1;
+  z-index: 3;
 
   &[data-placement^="bottom"] {
     margin-top: $datepicker__triangle-size + 2px;
